--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,3 +18,13 @@ jobs:
       with:
         name: hello-artifact
         path: hello.txt
+  download:
+        runs-on: ubuntu-latest
+        steps:
+         - name : download step
+           uses: actions/download-artifact@v4
+           with:
+              name: my-artifact
+              path: hello.txt
+         - name: Display structure of downloaded files
+           run: cat hello.txt
