--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -24,7 +24,7 @@ jobs:
          - name : download step
            uses: actions/download-artifact@v4
            with:
-              name: my-artifact
+              name: ./artifacts
               path: hello.txt
          - name: Display structure of downloaded files
            run: cat hello.txt
