--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -22,9 +22,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
          - name : download step
-           uses: actions/download-artifact@v4
+           uses: actions/download-artifact@v2
            with:
-              name: ./artifacts
+              name: hello-artifact
               path: hello.txt
          - name: Display structure of downloaded files
            run: cat hello.txt
