--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Archive text file
       uses: actions/upload-artifact@v2
       with:
-        name: hello-artifact
+        name: hello-artifactt
         path: hello.txt
   download:
         runs-on: ubuntu-latest
@@ -24,7 +24,7 @@ jobs:
          - name : download step
            uses: actions/download-artifact@v2
            with:
-              name: hello-artifact
+              name: hello-artifactt
               path: ./artifacts
          - name: Display structure of downloaded files
            run: cat ./artifacts/hello.txt
